fin primer etapa angular

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,8 @@
 
 </head>
 <body>
-  <script src="assets/js/script.js"></script>
+  <script src="./assets/js/script.js"></script>
+
 
   <app-root></app-root>
 </body>
